--- a/templates/index.html
+++ b/templates/index.html
@@ -6,121 +6,197 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
-    <title>스파르타 피디아</title>
-
-    <link rel="stylesheet" type="text/css" href="/static/styles/style.css">
-
+    <title>코멘트 포스트&겟 테스트</title>
     <style>
-        
+        .mytitle {
+            background-color: green;
+            color: white;
+            height: 250px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+            background-image: url('https://movie-phinf.pstatic.net/20210715_95/1626338192428gTnJl_JPEG/movie_image.jpg');
+            background-position: center;
+            background-size: cover;
+
+
+        }
+
+        .mytitle>button {
+            width: 250px;
+            height: 50px;
+
+            background-color: transparent;
+            border: 1px solid white;
+            color: white;
+            border-radius: 50px;
+            margin-top: 20px;
+        }
+
+        .mytitle>button:hover {
+            border: 2px solid white;
+        }
+
+        .mytitle>button {
+            width: 250px;
+            height: 50px;
+
+            background-color: transparent;
+            border: 1px solid white;
+            color: white;
+            border-radius: 50px;
+            margin-top: 20px;
+        }
+
+        .mytitle>button:hover {
+            border: 2px solid white;
+        }
+
+        .mycomments {
+            color: grey;
+
+        }
+
+        .mycards {
+            width: 1200px;
+            margin: 20px auto 20px auto;
+        }
+
+        .mypost {
+            margin: 20px auto 20px auto;
+            width: 500px;
+            padding: 20px 20px 20px 20px;
+            box-shadow: 0px 0px 3px 0px grey;
+        }
+
+        .mybtn {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            margin-top: 10px;
+        }
+
+        .mybtn>button {
+            margin-right: 10px;
+        }
     </style>
     <script>
-        $(document).ready(function(){
-          listing();
+        $(document).ready(function () {
+            listing();
         });
 
         function listing() {
-            fetch('/member').then((res) => res.json()).then((data) => {
-            console.log(data)
-            alert(data['msg'])
+            fetch("/guestbook").then((res) => res.json()).then((data) => {
+                let rows = data['result']
+                
+                $('#yourcomments').empty()
+                rows.forEach((a) => {
+                    let comment_id = a['commentId']
+                    let comment_name = a['commentName']
+                    let comment_date = a['commentDate']
+                    let comment_content = a['commentContent']
+                    let temp_html = `
+                                <div class="card h-100">
+                                <div class="card-body">
+                                <h4 class="comment_id"> ID: ${comment_id} </h4>
+                                <h4 class="comment_name"> 작성자: ${comment_name} </h4>
+                                <h4 class="comment_name"> 작성일자: ${comment_date} </h4>
+                                <h4 class="comment_content"> ${comment_content} </h4>
+                                </div>
+                             </div>`
+                             $('#yourcomments').append(temp_html)
+                })
             })
         }
+
 
         function posting() {
-						let formData = new FormData();
-            formData.append("sample_give", "샘플데이터");
+            let commentId = $('#commentId').val()
+            let commentName = $('#commentName').val()
+            let commentContent = $('#commentContent').val()
 
-            fetch('/member', {method : "POST",body : formData}).then((res) => res.json()).then((data) => {
-            console.log(data)
-            alert(data['msg'])
-            })
+            let formData = new FormData();
+            formData.append("commentId_give", commentId);
+            formData.append("commentName_give", commentName);
+            formData.append("commentContent_give", commentContent);
+
+            fetch("/guestbook", { method: "POST", body: formData })
+                .then((res) => res.json())
+                .then((data) => {
+                    alert(data["msg"]);
+                    window.location.reload();
+                });
         }
 
-        function open_box(){
-            $('#post-box').show()
-        }
-        function close_box(){
-            $('#post-box').hide()
-        }
     </script>
 </head>
 
 <body>
-<div class="mytitle">
-    <h1>내 생애 최고의 영화들</h1>
-    <button onclick="open_box()">영화 기록하기</button>
-</div>
-<div class="mypost" id="post-box">
-    <div class="form-floating mb-3">
-        <input id="url" type="email" class="form-control" placeholder="name@example.com">
-        <label>영화URL</label>
+
+    <div class="mypost">
+        <div class="form-floating mb-3">
+            <input type="Id" class="form-control" id="commentId" placeholder="abcdefg123">
+            <label for="floatingInput">ID</label>
+        </div>
+        <div class="form-floating mb-3">
+            <input type="Name" class="form-control" id="commentName" placeholder="홍길동">
+            <label for="floatingInput">작성자</label>
+        </div>
+        <div class="form-floating mb-3">
+            <textarea class="form-control" id="commentContent" placeholder="Leave a comment here"></textarea>
+            <label for="floatingTextarea2">코멘트</label>
+        </div>
+        <div class="mybtns">
+            <button onclick="posting()" type="button" class="btn btn-danger">등록하기</button>
+        </div>
     </div>
-    <div class="form-floating">
-        <textarea id="comment" class="form-control" placeholder="Leave a comment here"></textarea>
-        <label for="floatingTextarea2">코멘트</label>
-    </div>
-    <div class="mybtns">
-        <button onclick="posting()" type="button" class="btn btn-dark">기록하기</button>
-        <button onclick="close_box()" type="button" class="btn btn-outline-dark">닫기</button>
-    </div>
-</div>
-<div class="mycards">
-    <div class="row row-cols-1 row-cols-md-4 g-4" id="cards-box">
-        <div class="col">
+
+    <div class="yourcomments">
+        <div id="yourcomments" class="row row-cols-1 row-cols-md-1 g-3" id="cards-box">
             <div class="card h-100">
-                <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                     class="card-img-top">
                 <div class="card-body">
-                    <h5 class="card-title">영화 제목이 들어갑니다</h5>
-                    <p class="card-text">여기에 영화에 대한 설명이 들어갑니다.</p>
-                    <p>⭐⭐⭐</p>
-                    <p class="mycomment">나의 한줄 평을 씁니다</p>
+                    <h4 class="comment_id"> ID: verver </h4>
+                    <h4 class="comment_name"> 작성자: 베르베르성인 </h4>
+                    <h4 class="comment_date"> 작성일자: 2023-05-19</h4>
+                    <h4 class="comment_content"> 예쁘게 잘 꾸미셨네요!</h4>
                 </div>
             </div>
-        </div>
-        <div class="col">
             <div class="card h-100">
-                <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                     class="card-img-top">
                 <div class="card-body">
-                    <h5 class="card-title">영화 제목이 들어갑니다</h5>
-                    <p class="card-text">여기에 영화에 대한 설명이 들어갑니다.</p>
-                    <p>⭐⭐⭐</p>
-                    <p class="mycomment">나의 한줄 평을 씁니다</p>
+                    <h4 class="comment_id"> ID: arar </h4>
+                    <h4 class="comment_name"> 작성자: 프렏첼 맛있어 </h4>
+                    <h4 class="comment_date"> 작성일자: 2023-05-19</h4>
+                    <h4 class="comment_content"> 아일랜드스럽네요 ~</h4>
                 </div>
             </div>
-        </div>
-        <div class="col">
             <div class="card h-100">
-                <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                     class="card-img-top">
                 <div class="card-body">
-                    <h5 class="card-title">영화 제목이 들어갑니다</h5>
-                    <p class="card-text">여기에 영화에 대한 설명이 들어갑니다.</p>
-                    <p>⭐⭐⭐</p>
-                    <p class="mycomment">나의 한줄 평을 씁니다</p>
+                    <h4 class="comment_id"> ID: metaplanet </h4>
+                    <h4 class="comment_name"> 작성자: 어질어질해 </h4>
+                    <h4 class="comment_date"> 작성일자: 2023-05-19</h4>
+                    <h4 class="comment_content"> 너무 잘 만든 거 아니에요? 완전 부럽!</h4>
                 </div>
             </div>
-        </div>
-        <div class="col">
             <div class="card h-100">
-                <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                     class="card-img-top">
                 <div class="card-body">
-                    <h5 class="card-title">영화 제목이 들어갑니다</h5>
-                    <p class="card-text">여기에 영화에 대한 설명이 들어갑니다.</p>
-                    <p>⭐⭐⭐</p>
-                    <p class="mycomment">나의 한줄 평을 씁니다</p>
+                    <h4 class="comment_id"> ID: lemonaid </h4>
+                    <h4 class="comment_name"> 작성자: 레모네이드 상큼 </h4>
+                    <h4 class="comment_date"> 작성일자: 2023-05-19</h4>
+                    <h4 class="comment_content"> 곧 다가올 여행지는 시원한 아일랜드에서 ~</h4>
                 </div>
             </div>
         </div>
     </div>
-</div>
+
 </body>
 
 </html>
