GET & POST 취합 완료

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -103,7 +103,7 @@
                             <tr>
                                 
                                 <td colspan="2"> 
-                                        <button type="button" class="comment-btn" onclick="">
+                                        <button type="button" class="comment-btn" onclick="posting()">
                                             방명록 작성</button>
                                 </td>
                             </tr>
