--- a/static/styles/detailStyle.css
+++ b/static/styles/detailStyle.css
@@ -203,6 +203,11 @@ p {
     margin-right:auto;
 }
 
+.comment-tbl2 {
+    float : right;
+    width: 350px;
+}
+
 .form-control {
     margin-left: 10px;
     width: 500px;
