feat : app.py - date format edit
add - Before the comments informs enter into DB, do date preprocessing.

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -18,7 +18,6 @@
     <link rel="stylesheet" type="text/css" href="/static/styles/detailStyle.css">
     <script type="text/javascript" src="/static/js/detailJS.js"></script>
 
-
     <title>임채영 개새기의 아일랜드</title>
 </head>
 
@@ -91,14 +90,14 @@
                         </tr>
                         <tr>
                             <td>내용 : </td>
-                            <td><textarea id="commentContent" class="form-control"
+                            <td><textarea rows="1" cols="10" id="commentContent" class="form-control"
                                     placeholder="개새랜드에 응원 한마디"></textarea>
                         </tr>
                         <tr>
                             <td colspan="2">
                                 <div class="comment-tbl2">
-                                    비밀번호 : <input type="password" id="password" class="">
-                                    <button type="button" class="comment-btn" onclick="posting()">
+                                    비밀번호 : <input type="password" id="commentPassword" >
+                                    <button type="submit" class="comment-btn" onclick="posting()">
                                         방명록 작성</button></p>
                                 </div>
                             </td>
