--- a/templates/detail.html
+++ b/templates/detail.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+        
     <title>GAESAE-LAND</title>
     <!-- 폰트 -->
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet" />
@@ -115,10 +123,22 @@
 
                             <div class="comment1">
                                 <div class="comments">
-                                    임채영  :  " 개!!! "
+                                    <p>임채영</p>
+                                    <p>개!!!</p>
                                 </div>
                                 <div class="btn-area">
-                                <button class="update-btn" onclick="location.href='/'">수정</button> <button class="delete-btn" onclick="">삭제</button>
+                                <button class="update-btn" >수정</button> <button class="delete-btn" onclick="">삭제</button>
+                                <form class="edit-form" style="display: none;">
+                                    <input type="text" name="name" placeholder= 임채영 required>
+                                    <textarea name="message" placeholder= 개!!! required></textarea>
+                                    <button type="submit">저장</button>
+                                    <form class="edit-form" style="display: none;">
+                                        <input type="text" name="name" placeholder="유저 이름" value="임채영" required>
+                                        <textarea name="message" placeholder="내용" required>개</textarea>
+                                        <button class="submit-btn" data-id="${_id}" >저장</button>
+                                        <button class="cancel-btn">취소</button>
+                                    </form>
+                                  </form>
                                 </div>
                             </div>
 
@@ -127,7 +147,7 @@
                                     일론머스크  :  " W is this? "
                                 </div>
                                 <div class="btn-area">
-                                <button class="update-btn" onclick="location.href='/'">수정</button> <button class="delete-btn" onclick="">삭제</button>
+                                <button class="update-btn" onclick="">수정</button> <button class="delete-btn" onclick="">삭제</button>
                                 </div>
                             </div>
                         </div>
