--- a/templates/detail.html
+++ b/templates/detail.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+        
     <title>GAESAE-LAND</title>
     <!-- 폰트 -->
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet" />
@@ -19,7 +27,7 @@
     <script type="text/javascript" src="/static/js/detailJS.js"></script>
 
     
-    <title>임채영 개새기의 아일랜드</title>
+    <title>상의성 개새기의 아일랜드</title>
 </head>
 
 <body>
@@ -44,48 +52,52 @@
             <div class="container">
                 <div class="header">
                     <div class="img">
-                        <img src="https://jjalbang.today/jjv31I.gif" alt="image" />
+                        <img src="https://imgtr.ee/images/2023/05/18/2UTUI.jpg" alt="image" />
                     </div>
                     <div class="text1">
-                        <div> <h1>임채영 개새기의 <br/> 아일랜드</h1> </div>
-                        <div> <p>mbti : <b>ENTP</b> </p> </div>
-                        <div> <p>blog : <a href='https://cdev.tistory.com/'>https://cdev.tistory.com/</a></p> </div>
-                        <div id=""> <p>email : <a href="mailto:limchae098@gmail.com">limchae098@gmail.com</a></p> </div>
-                        <div id=""> <p>#운동중독 #물먹는하마 #소식</p> </div>
+                        <div> <h1>상의성 개새기의 <br/> 아일랜드</h1> </div>
+                        <div> <p>mbti : <b>INFJ</b> </p> </div>
+                        <div> <p>blog : <a href='https://velog.io/@uiseongsang'>https://velog.io/@uiseongsang</a></p> </div>
+                        <div id=""> <p>email : <a href="mailto:dmltjd102@gmail.com">dmltjd102@gmail.com</a></p> </div>
+                        <div id=""> <p>#여행에미치다 #평냉전도자 #헬정자</p> </div>
                     </div>
                 </div>
                 <div class="bottom">
-                    <p>안녕하세요! 이곳은 <b>개</b>발자 <b>새</b>내<b>기</b>, 임채영님의 아일랜드 입니다.
+                    <p>안녕하세요! 이곳은 <b>개</b>발자 <b>새</b>내<b>기</b>, 상의성님의 아일랜드 입니다.
                         <br/><br/>
-                       <b>"활동적이고, 호기심 많은 스타일"</b>
+                       <b>"저는 행복을 추구하는 사람이에요"</b>
                        <br/>
-                        외향적인 편이지만, 정신없이 본인 말만 하는 사람들과는 기가 빨려서 초고속 귀가합니다. 
-                        그렇게 기 빨리면 반나절 정도 집에서 쉬다가 다시 지루해져서 놀러 나갑니다.
-                        새로운 일을 시도하는 걸 좋아하고, 여행은 혼자 가는걸 선호합니다. 새 여행지에서 새로운
-                        사람들을 만나서 각자의 가치관, 삶에 대한 이야기를 나누는걸 좋아합니다.
-                        주변에서 <b>"물음표 살인마"</b>라고 불립니다. 궁금한거 참을 수 있지만 안 참습니다. 
-                        궁금해서. 좋아하는 건.. 어딘가 찌질한데 귀엽고 통통한 
+                        사람들은 돈이 행복의 우선이라고 하잖아요! 물론 그 말은 어느정도 공감은 합니다...
+                        하지만 무조건 돈이 많다고 행복하진 않다고 생각합니다!
+                        하지만 큰 성취로 인해 돈을 많이 벌면 행복함을 느낄수 있다고 생각합니다!
+                        본인이 힘들게 무언가를 해서 얻은 그게 행복이라고 생각합니다!
+                        그래서 열심히 살면 행복해지지 않을까 싶습니다! 그치만 과로는 절대 아닙니다...
                         <br/><br/>
 
-                       최근에 클라이밍을 시작해서 언제든 클라이밍 같이 하고 싶으신 분은 언제든 말만 해주세요!!
-                       입문 단계라 잘은 못하지만 <b>"영상 촬영 + 리액션 크게"</b> 무조건 자신 있습니다 !
-                       
+                       운동을 좋아해서 많은 운동을 해보았습니다.
+                       농구,탁구,헬스,크로스핏을 주로 했고... 요즘은 매일 헬스장에 나가는 헬정자입니다!
+                       웨이트도 무게를 치는거 보단 자극 위주로 운동하는걸 선호하는 편입니다
+                       그래서 그런가 몸은 안 좋습니다;;;
                     </p>
                     <p> 
-                        제 가장 큰 장점은 겉으로 보여지는 모습이 그대로 제 모습이라는 점입니다.
-                        <br/>
-                        그리고 뒷담화 하는 사람들한테 뒤에서 욕하지 말라고 말합니다.
+                        제가 생각하는 저의 장점은 사람의 말을 잘 경청하고 이해심이 많습니다
+                        착하다는 말도 많이 들어보고... 좋은 말이겠죠??... 착하게 생겼다는 아닙니다;;;
+                        어릴 떄부터 심리학도 좋아 했었고 군대에서 상담병을 했을 정도로 사람의 말을 잘 경청하고
+                        상대방 입장에서 많이 생각을 합니다. 저랑 친해지면 나쁠건 없을겁니다!! 많이 다가와 주세요!
                     </p>
 
-                    <p> 제 인생 목표는 "내가 해야 할 일은 <b>적당히</b>, 재밌어 보이는건 <b>열심히</b>" 
+                    <p> 제 교육 목표는 "프로젝트를 통해 많이 배우고 즐기는것입니다" 
                         <br/>
-                        이야기가 잘 통하는 사람이랑 대화하는걸 가장 좋아해서, 
-                        깊은 대화가 통하는 사람을 만나서 평생 친구하는게 제 인생 목표 중 하나입니다! 
+                        면접을 통해 프로젝트쪽에 빈약하다는 걸 느끼고 혼자서 프로젝트도 만들어 봤지만 성과를 못 보아서
+                        여기 교육을 통해 한 단계 더 성장 하고 싶습니다! 어디에 내놓아도 부족함 없는 프로젝트를 만들고 싶어요!
                     </p>
-                    <p> 협업할 때는 묵묵히 맡은 바를 잘 해내고, 돌려 말하면 소통에 문제가 있어 기분 
-                        나쁘지 않는 선에서 직설적으로 의견을 잘 전달하려 노력합니다. </p>
+                    <p> 협업할 때는 소통을 중요시 하는 스타일입니다.
+                        많은 사람들이 소통의 중요성을 놓치는 부분이 있습니다!
+                        다리를 양쪽에서 건설할 때 1도라도 틀어지면 나중에는 엄청난 차이를 보여주듯이
+                        소통도 비슷한거 같다고 생각합니다!!
+                    </p>
 
-                    <p> 저에 대한 질문 언제든 방명록에 적어주세요!! 대신 누군지 모를만한 이름으로 적어주세요!!</p>
+                    <p> 방명록은 언제든지 환영입니다!! </p>
                     <br/>
                     <hr/> 
 
@@ -115,10 +127,22 @@
 
                             <div class="comment1">
                                 <div class="comments">
-                                    임채영  :  " 개!!! "
+                                    <p>임채영</p>
+                                    <p>개!!!</p>
                                 </div>
                                 <div class="btn-area">
-                                <button class="update-btn" onclick="location.href='/'">수정</button> <button class="delete-btn" onclick="">삭제</button>
+                                <button class="update-btn" >수정</button> <button class="delete-btn" onclick="">삭제</button>
+                                <form class="edit-form" style="display: none;">
+                                    <input type="text" name="name" placeholder= 임채영 required>
+                                    <textarea name="message" placeholder= 개!!! required></textarea>
+                                    <button type="submit">저장</button>
+                                    <form class="edit-form" style="display: none;">
+                                        <input type="text" name="name" placeholder="유저 이름" value="임채영" required>
+                                        <textarea name="message" placeholder="내용" required>개</textarea>
+                                        <button class="submit-btn" data-id="${_id}" >저장</button>
+                                        <button class="cancel-btn">취소</button>
+                                    </form>
+                                  </form>
                                 </div>
                             </div>
 
@@ -127,7 +151,7 @@
                                     일론머스크  :  " W is this? "
                                 </div>
                                 <div class="btn-area">
-                                <button class="update-btn" onclick="location.href='/'">수정</button> <button class="delete-btn" onclick="">삭제</button>
+                                <button class="update-btn" onclick="">수정</button> <button class="delete-btn" onclick="">삭제</button>
                                 </div>
                             </div>
                         </div>
