--- a/templates/index.html
+++ b/templates/index.html
@@ -1,202 +1,119 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hahmlet&display=swap" rel="stylesheet">
+    <!-- 내리는 효과 js 적용 코드 -->
+    <!-- <script type="text/javascript" src="{{ url_for('static', filename='snowfall.jquery.js') }}"></script> -->
+    <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-
-    <title>코멘트 포스트&겟 테스트</title>
-    <style>
-        .mytitle {
-            background-color: green;
-            color: white;
-            height: 250px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-
-            background-image: url('https://movie-phinf.pstatic.net/20210715_95/1626338192428gTnJl_JPEG/movie_image.jpg');
-            background-position: center;
-            background-size: cover;
-
-
-        }
-
-        .mytitle>button {
-            width: 250px;
-            height: 50px;
-
-            background-color: transparent;
-            border: 1px solid white;
-            color: white;
-            border-radius: 50px;
-            margin-top: 20px;
-        }
-
-        .mytitle>button:hover {
-            border: 2px solid white;
-        }
-
-        .mytitle>button {
-            width: 250px;
-            height: 50px;
-
-            background-color: transparent;
-            border: 1px solid white;
-            color: white;
-            border-radius: 50px;
-            margin-top: 20px;
-        }
-
-        .mytitle>button:hover {
-            border: 2px solid white;
-        }
-
-        .mycomments {
-            color: grey;
-
-        }
-
-        .mycards {
-            width: 1200px;
-            margin: 20px auto 20px auto;
-        }
-
-        .mypost {
-            margin: 20px auto 20px auto;
-            width: 500px;
-            padding: 20px 20px 20px 20px;
-            box-shadow: 0px 0px 3px 0px grey;
-        }
-
-        .mybtn {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
-            margin-top: 10px;
-        }
-
-        .mybtn>button {
-            margin-right: 10px;
-        }
-    </style>
-    <script>
-        $(document).ready(function () {
-            listing();
-        });
-
-        function listing() {
-            fetch("/guestbook").then((res) => res.json()).then((data) => {
-                let rows = data['result']
-                
-                $('#yourcomments').empty()
-                rows.forEach((a) => {
-                    let comment_id = a['commentId']
-                    let comment_name = a['commentName']
-                    let comment_date = a['commentDate']
-                    let comment_content = a['commentContent']
-                    let temp_html = `
-                                <div class="card h-100">
-                                <div class="card-body">
-                                <h4 class="comment_id"> ID: ${comment_id} </h4>
-                                <h4 class="comment_name"> 작성자: ${comment_name} </h4>
-                                <h4 class="comment_name"> 작성일자: ${comment_date} </h4>
-                                <h4 class="comment_content"> ${comment_content} </h4>
-                                </div>
-                             </div>`
-                             $('#yourcomments').append(temp_html)
-                })
-            })
-        }
-
-
-        function posting() {
-            let commentId = $('#commentId').val()
-            let commentName = $('#commentName').val()
-            let commentContent = $('#commentContent').val()
-
-            let formData = new FormData();
-            formData.append("commentId_give", commentId);
-            formData.append("commentName_give", commentName);
-            formData.append("commentContent_give", commentContent);
-
-            fetch("/guestbook", { method: "POST", body: formData })
-                .then((res) => res.json())
-                .then((data) => {
-                    alert(data["msg"]);
-                    window.location.reload();
-                });
-        }
-
-    </script>
+    <link rel="shortcut icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/128/4350/4350287.png" /> <!--상단 아이콘-->
+    <title>GAESAE-LAND</title>
+    
+    <link rel="stylesheet" type="text/css" href="/static/styles/style.css">
+    <script type="text/javascript" src="/static/js/main.js"></script>
+    
 </head>
-
+<!-- 내리는 효과 -->
+<!-- <script type="text/javascript" src="../static/js/snowfall.jquery.js"></script>
+    <script type='text/javascript'>
+        $(document).ready(function () {
+            $(document).snowfall({
+                minSize: 5,
+                maxSize: 10,
+                round: true,
+                flakeColor: '#E3FDFD'
+            })
+        });
+    </script> -->
 <body>
-
-    <div class="mypost">
-        <div class="form-floating mb-3">
-            <input type="Id" class="form-control" id="commentId" placeholder="abcdefg123">
-            <label for="floatingInput">ID</label>
-        </div>
-        <div class="form-floating mb-3">
-            <input type="Name" class="form-control" id="commentName" placeholder="홍길동">
-            <label for="floatingInput">작성자</label>
-        </div>
-        <div class="form-floating mb-3">
-            <textarea class="form-control" id="commentContent" placeholder="Leave a comment here"></textarea>
-            <label for="floatingTextarea2">코멘트</label>
-        </div>
-        <div class="mybtns">
-            <button onclick="posting()" type="button" class="btn btn-danger">등록하기</button>
-        </div>
-    </div>
-
-    <div class="yourcomments">
-        <div id="yourcomments" class="row row-cols-1 row-cols-md-1 g-3" id="cards-box">
-            <div class="card h-100">
-                <div class="card-body">
-                    <h4 class="comment_id"> ID: verver </h4>
-                    <h4 class="comment_name"> 작성자: 베르베르성인 </h4>
-                    <h4 class="comment_date"> 작성일자: 2023-05-19</h4>
-                    <h4 class="comment_content"> 예쁘게 잘 꾸미셨네요!</h4>
-                </div>
-            </div>
-            <div class="card h-100">
-                <div class="card-body">
-                    <h4 class="comment_id"> ID: arar </h4>
-                    <h4 class="comment_name"> 작성자: 프렏첼 맛있어 </h4>
-                    <h4 class="comment_date"> 작성일자: 2023-05-19</h4>
-                    <h4 class="comment_content"> 아일랜드스럽네요 ~</h4>
-                </div>
-            </div>
-            <div class="card h-100">
-                <div class="card-body">
-                    <h4 class="comment_id"> ID: metaplanet </h4>
-                    <h4 class="comment_name"> 작성자: 어질어질해 </h4>
-                    <h4 class="comment_date"> 작성일자: 2023-05-19</h4>
-                    <h4 class="comment_content"> 너무 잘 만든 거 아니에요? 완전 부럽!</h4>
-                </div>
-            </div>
-            <div class="card h-100">
-                <div class="card-body">
-                    <h4 class="comment_id"> ID: lemonaid </h4>
-                    <h4 class="comment_name"> 작성자: 레모네이드 상큼 </h4>
-                    <h4 class="comment_date"> 작성일자: 2023-05-19</h4>
-                    <h4 class="comment_content"> 곧 다가올 여행지는 시원한 아일랜드에서 ~</h4>
-                </div>
+    <!-- 팝업창 -->
+    <div id="popup">
+        <div id="popmenu">
+            <h2>개새기</h2>
+            <h3>개발자 새내기</h3>
+            <h2>개새랜드 깃허브</h2>
+            <h3><a href='https://github.com/uiseongsang/ggLand'>https://github.com/uiseongsang/ggLand</a></h3>
+            <div class="exit">
+                <button id="skip" onclick="popup_close()">닫기</button>
             </div>
         </div>
     </div>
-
+    <!-- 팝업창 종료 --> 
+    <div class="team" >
+        <div class="circle">
+            <span id = "titlename">개새기</span>
+            <span id = "titlename">개발자새내기</span>
+            <span id ="mini">🛥</span> <!--🛥-->
+        </div>
+    </div>
+    <div class="page1">
+        <img src="https://imgtr.ee/images/2023/05/18/2UTUI.jpg" alt="img X">
+        <div class="pagetext">
+            <span>name:상의성</span>
+            <span>mbti:INFJ</span>
+            <span>tag:#여행에미치다 
+                <br>#평냉전도자 #헬정자</br>
+            </span>
+        </div>
+    </div>
+    <div class="page2">
+        <img src="https://imgtr.ee/images/2023/05/18/2kDXD.jpg" alt="img X">
+        <div class="pagetext">
+            <span>name:이상인</span>
+            <span>mbti:ENTJ</span>
+            <span>tag:#당구 #게임
+                <br> #노래방  #롤 #메이플</br>
+            </span>
+        </div>
+    </div>
+    <div class="page3">
+        <img src="{{url_for('static', filename = '/image/suyeon.jpg')}}" alt="img X">
+        <div class="pagetext">
+            <span>name:이수연</span>
+            <span>mbti:ISFJ</span>
+            <span>tag: #카페 #음악 
+                <br>#집순이</br>
+            </span>
+        </div>
+    </div>
+    <div class="page4">
+        <img src="https://imgtr.ee/images/2023/05/18/2kJNJ.jpg" alt="img X">
+        <div class="pagetext">
+            <span>name:임채영</span>
+            <span>mbti:ENTP</span>
+            <span>tag:#운동중독 
+                <br>#물먹는하마 #소식 </br>
+            </span>
+        </div>
+    </div>
+    <div class="page5">
+        <img src="https://imgtr.ee/images/2023/05/18/2kQvM.jpg" alt="img X">
+        <div class="pagetext">
+            <span>name:조혜연</span>
+            <span>mbti:ENTJ</span>
+            <span>tag:#사진 #여행 
+                <br>#프로루티너</br>
+            </span>
+        </div>
+    </div>
+    <div class="mainhead">
+        <div class="maintitle">
+            <span>개</span>
+            <span>새</span>
+            <span>랜</span>
+            <span>드</span>
+        </div>
+        <div class="maintitle2">
+            <span>🏝️ 오신 것을 환영합니다 🏝️</span> <!--🏝-->
+        </div>
+    </div>
+    <div class="mainbody">
+    </div>
 </body>
-
 </html>
